# rn-template

./: .easignore  .env  .env.development  .env.regtest  .env.staging  .eslintignore  .eslintrc.js  .gitattributes  .gitignore  .prettierignore  .prettierrc.mjs  README.md  app.config.ts  app.json  babel.config.js  deprecated-eslintrc.js  eas.json  env.js  env.ts  eslint.config.mjs  global.css  lefthook.yml  metro.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tamagui.config.ts  tsconfig.base.json  tsconfig.json  tsconfig.prev.json
.eas/workflows/: build-manual.yml  build-release.yml
.github/workflows/: eas-build-prod.yml  eas-build-qa.yml  lint-ts.yml  new-app-version.yml  release.yml  type-check.yml
abis/: PoseidonSMT.json  Registration.json  StateKeeper.json
android/: gradle.properties
android/app/: build.gradle
app/(tabs)/: index.tsx
assets/: anime_girl.riv  arcane.riv  jazmin_bop.riv  keyboard.riv
assets/models/: bionet_v3_medium.tflite
docs/: WITNESS_CALCULATOR_GUIDE.md
ios/: Podfile
ios/ObytesApp/: Info.plist
modules/wtnscalcs/android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
modules/wtnscalcs/android/src/main/: AndroidManifest.xml
modules/wtnscalcs/android/src/main/java/com/rnwtnscalcs/: RnWtnscalcsModule.kt  RnWtnscalcsPackage.kt  WtnsUtil.kt
plugins/: withLocalAar.plugin.js
scripts/: git-lfs-pre-install.sh  i18next-syntax-validation.cjs  prepare-secrets.cjs  transformer.js
src/: App.tsx  config.ts  main.ts  root-route-names.ts  route-names.ts  route-types.ts  routes.tsx
(+444 files in other folders)
